[workspace]

# To fix build scripts with different feature flags enabled compared to the target binaries.
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html
resolver = "2"

members = [
	"pkg/macros",
	"pkg/common",
	"pkg/net",
	"pkg/reflection",
	"pkg/asn",
	"pkg/crypto",
	"pkg/parsing",
	"pkg/parsing_compiler",
	"pkg/compression",
	"pkg/math",
	"pkg/protobuf_core",
	"third_party/protobuf_descriptor",
	"pkg/protobuf_compiler",
	"pkg/protobuf",
	"pkg/protobuf_json",
	"pkg/automata",
	"pkg/http",
	"pkg/rpc",
	"pkg/rpc_test",
	"pkg/image",
	"third_party/pkix",
	"pkg/sstable",
	"pkg/graphics",
	"pkg/stadia_controller",
	"pkg/stream_deck",
	"pkg/raft",
	"pkg/haystack",
	"pkg/emulator",
	"pkg/bittorrent",
	# "pkg/symbolic"
	"pkg/siglent",
	"third_party/openssl",
	"pkg/xml",
	"third_party/crates",
	"pkg/parsing_test",
	"pkg/regexp_macros",
	"third_party/google",
	"pkg/json",
	"pkg/peripheral",
	"pkg/rpi",
	"pkg/home_hub",
	"pkg/usb",
	"pkg/container",
	"pkg/dymo",
	"pkg/blinkstick",
	"pkg/datastore",
	"pkg/sensor_monitor",
	"pkg/usb_device",
	"pkg/builder",
	"pkg/rp2040",
	"pkg/rp2040_programmer",
	"third_party/grpc_proto",
	"pkg/rpc_util",
	"pkg/nordic",
	"third_party/pico_core",
	"third_party/mime_types",
	"pkg/executor",
	"pkg/ubiquiti",
	"pkg/cmsis_svd",
	"pkg/peripherals",
	"pkg/peripherals_raw",
	"pkg/nordic_tools"
]

[profile.dev]
#opt-level = 3
#lto = true

# Crypto is expensive. Always optimize it.
[profile.dev.package.crypto]
opt-level = 3
debug = false

[profile.dev.package.http]
opt-level = 3
debug = false

# Also very expensive
[profile.dev.package.compression]
opt-level = 3
debug = false

[profile.dev.package.math]
opt-level = 3
debug = false

[profile.dev.package.xml]
opt-level = 3
debug = false

[profile.release]
lto = true
opt-level = 3 
panic = 'abort'
debug = true
