[workspace]

# To fix build scripts with different feature flags enabled compared to the target binaries.
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html
resolver = "2"

members = [
	"pkg/macros",
	"pkg/common",
	"pkg/net",
	"pkg/reflection",
	"pkg/asn",
	"pkg/asn/compiler",
	"pkg/crypto",
	"pkg/parsing",
	"pkg/parsing/macros",
	"pkg/parsing/compiler",
	"pkg/compression",
	"pkg/math",
	"pkg/math/compute",
	"pkg/protobuf/core",
	"third_party/protobuf_descriptor",
	"pkg/protobuf/compiler",
	"pkg/protobuf",
	"pkg/protobuf/json",
	"pkg/automata",
	"pkg/http",
	"pkg/rpc",
	"pkg/rpc_test",
	"pkg/image",
	"third_party/pkix",
	"pkg/sstable",
	"pkg/graphics",
	"pkg/stadia_controller",
	"pkg/stream_deck",
	"pkg/raft",
	"pkg/haystack",
	"pkg/emulator",
	"pkg/bittorrent",
	# "pkg/math/symbolic"
	"pkg/siglent",
	"third_party/openssl",
	"pkg/xml",
	"third_party/crates",
	"pkg/parsing_test",
	"pkg/automata/regexp_macros",
	"third_party/google",
	"pkg/json",
	"pkg/peripheral",
	"pkg/rpi",
	"pkg/rpi/imager",
	"pkg/home_hub",
	"pkg/usb",
	"pkg/container",
	"pkg/dymo",
	"pkg/blinkstick",
	"pkg/datastore",
	"pkg/sensor_monitor",
	"pkg/usb_device",
	"pkg/builder",
	"pkg/rp2040",
	"pkg/rp2040_programmer",
	"third_party/grpc_proto",
	"pkg/rpc_util",
	"pkg/nordic",
	"third_party/pico_core",
	"third_party/mime_types",
	"pkg/executor",
	"pkg/ubiquiti",
	"pkg/cmsis_svd",
	"pkg/peripherals",
	"pkg/peripherals/raw",
	"pkg/peripherals/devices",
	"pkg/peripherals/tools",
	"pkg/nordic_tools",
	"pkg/web",
	"pkg/rpi_controller",
	"pkg/nordic_proto",
	"pkg/swd_prog",
	"pkg/hue",
	"pkg/standing_desk",
	"pkg/cnc",
	"pkg/testing",
	"pkg/perf",
	"pkg/perf_util",
	"pkg/sys",
	"pkg/elf",
	"pkg/protobuf/bench",
	"pkg/flasher",
	"pkg/uf2",
	"pkg/skylark",
	"pkg/linker",
	"pkg/logging",
	"pkg/base/radix",
	"pkg/ptouch",
	"pkg/storage",
	"pkg/uuid",
	"pkg/uuid/macros",
	"pkg/tools",
	"pkg/file",
	"pkg/base/error",
	"pkg/markdown",
	"pkg/markdown/test",
	"pkg/base/args",
	"pkg/builder/deb",
	"third_party/libcamera",
	"pkg/base/units",
	"pkg/crypto/pgp",
	"third_party/v4l2",
	"pkg/rpi/streamer",
	"pkg/media/video",
]

[profile.dev]
#opt-level = 3
#lto = true

# Crypto is expensive. Always optimize it.
[profile.dev.package.crypto]
opt-level = 3
debug = false

[profile.dev.package.http]
opt-level = 3
debug = false

# Also very expensive
[profile.dev.package.compression]
opt-level = 3
debug = false

[profile.dev.package.math]
opt-level = 3
debug = false

[profile.dev.package.xml]
opt-level = 3
debug = false

[profile.release]
lto = true
opt-level = 3 
panic = 'abort'
debug = true
