[workspace]

# To fix build scripts with different feature flags enabled compared to the target binaries.
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html
resolver = "2"

members = [
	"pkg/macros",
	"pkg/common",
	"pkg/net",
	"pkg/reflection",
	"pkg/asn",
	"pkg/asn/compiler",
	"pkg/crypto",
	"pkg/crypto/jwt",
	"pkg/parsing",
	"pkg/parsing/macros",
	"pkg/parsing/compiler",
	"pkg/parsing/compiler/proto",
	"pkg/compression",
	"pkg/math",
	"pkg/math/compute",
	"pkg/protobuf/core",
	"pkg/protobuf/dynamic",
	"pkg/protobuf/compiler/proto",
	"third_party/protobuf_descriptor",
	"pkg/protobuf/compiler",
	"pkg/protobuf",
	"pkg/protobuf/json",
	"pkg/protobuf/json/proto",
	"pkg/automata",
	"pkg/http",
	"pkg/http/cache",
	"pkg/http/cache/proto",
	"pkg/rpc",
	"pkg/rpc_test",
	"pkg/image",
	"pkg/image/tools",
	"third_party/pkix",
	"pkg/sstable",
	"pkg/sstable/proto",
	"pkg/graphics",
	# "pkg/peripherals/devices/stadia_controller",
	"pkg/peripherals/devices/stream_deck",
	"pkg/raft",
	"pkg/raft/proto",
	"pkg/raft/client",
	# "pkg/haystack",
	"pkg/emulator",
	"pkg/net/bittorrent",
	# "pkg/math/symbolic"
	"pkg/siglent",
	"third_party/openssl",
	"pkg/format/xml",
	"third_party/crates",
	"pkg/parsing_test",
	"pkg/automata/regexp_macros",
	"pkg/format/json",
	"pkg/rpi",
	"pkg/rpi/controller",
	"pkg/rpi/imager",
	# "pkg/home_hub",
	"pkg/usb",
	"pkg/container",
	"pkg/container/proto",
	"pkg/container/client",
	# "pkg/peripherals/devices/dymo",
	# "pkg/peripherals/devices/blinkstick",
	"pkg/datastore",
	"pkg/datastore/proto",
	"pkg/datastore/bundle",
	"pkg/datastore/meta/client",
	"pkg/app/sensor_monitor",
	"pkg/usb_device",
	"pkg/builder",
	"pkg/builder/proto",
	# "pkg/rp2040",
	# "pkg/rp2040/programmer",
	"third_party/grpc_proto",
	"pkg/rpc_util",
	# "pkg/nordic",
	# "third_party/pico_core",
	"third_party/mime_types",
	"pkg/executor",
	"pkg/executor/multitask",
	# "pkg/api/ubiquiti",
	# "pkg/peripherals/cmsis_svd",
	"pkg/peripherals",
	"pkg/peripherals/raw",
	"pkg/peripherals/devices",
	"pkg/peripherals/tools",
	# "pkg/nordic_tools",
	"pkg/web",
	# "pkg/nordic_proto",
	# "pkg/flasher/swd_prog",
	# "pkg/api/hue",
	"pkg/standing_desk",
	"pkg/cnc",
	"pkg/cnc/gcode",
	"pkg/cnc/tools",
	"pkg/testing",
	"pkg/perf",
	"pkg/perf_util",
	"pkg/sys",
	"pkg/elf",
	"pkg/elf/tools",
	"pkg/protobuf/bench",
	# "pkg/flasher",
	# "pkg/flasher/uf2",
	"pkg/builder/skylark",
	# "pkg/builder/linker",
	"pkg/logging",
	"pkg/base/radix",
	# "pkg/peripherals/devices/ptouch",
	"pkg/storage",
	"pkg/uuid",
	"pkg/uuid/macros",
	"pkg/tools",
	"pkg/file",
	"pkg/base/error",
	"pkg/format/markdown",
	"pkg/format/markdown/test",
	"pkg/base/args",
	"pkg/builder/deb",
	# "third_party/libcamera",
	"pkg/base/units",
	"pkg/crypto/pgp",
	"pkg/crypto/test",
	# "third_party/v4l2",
	# "pkg/rpi/streamer",
	"pkg/media/video",
	"pkg/media/downloader",
	# "pkg/app/study",
	"pkg/api/google/discovery",
	"pkg/api/google/discovery/generated",
	"pkg/api/google/auth",
	"pkg/api/google/spanner",
	"pkg/api/google/dns",
	"pkg/api/google/storage",
	"pkg/api/acme",
	"third_party/protobuf_builtins",
	"third_party/googleapis",
	"third_party/chromium/cdm",
	"third_party/google/pprof/proto",
]

[profile.dev]
#opt-level = 3
#lto = true

# Crypto is expensive. Always optimize it.
[profile.dev.package.crypto]
opt-level = 3
debug = false

[profile.dev.package.executor]
opt-level = 3
debug = true

[profile.dev.package.http]
opt-level = 3
debug = true

[profile.dev.package.rpc]
opt-level = 3
debug = true

# Also very expensive
[profile.dev.package.compression]
opt-level = 3
debug = false

[profile.dev.package.math]
opt-level = 3
debug = false

[profile.dev.package.protobuf_compiler]
opt-level = 3
debug = false

[profile.dev.package.protobuf_core]
opt-level = 3
debug = false

[profile.dev.package.protobuf_descriptor]
opt-level = 3
debug = false

[profile.dev.package.xml]
opt-level = 3
debug = false

[profile.release]
lto = true
opt-level = 3 
panic = 'abort'
debug = true
