[package]
name = "asn"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
macros = { path = "../macros" }
math = { path = "../math" }
arrayref = "0.3.5"
common = { path = "../common" }
parsing = { path = "../parsing" }
bytes = { git = "https://github.com/tokio-rs/bytes" }
byteorder = "1.3.2"
hex = "0.3.2"
impl_ops = "0.1.1"
async-std = "0.99.4"
futures-preview = "0.3.0-alpha.17"
async-trait = "0.1.13"
generic-array = "0.13.2"
typenum = "1.11.2"
chrono = "0.4.9"
lazy_static = "1.4.0"