[package]
name = "blinkstick"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
usb = { path = "../usb" }
automata = { path = "../automata" }
regexp_macros = { path = "../regexp_macros" }
math = { path = "../math" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []