[package]
name = "blinkstick"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
usb = { path = "../usb" }
automata = { path = "../automata" }
regexp_macros = { path = "../regexp_macros" }
math = { path = "../math" }
executor = { path = "../executor" }
file = { path = "../file" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []