[package]
name = "builder"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
macros = { path = "../macros" }
protobuf = { path = "../protobuf" }
compression = { path = "../compression" }
crypto = { path = "../crypto" }
sys = { path = "../sys" }
skylark = { path = "../skylark" }
google = { path = "../../third_party/google" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []