[package]
name = "builder"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
macros = { path = "../macros" }
protobuf = { path = "../protobuf" }
compression = { path = "../compression" }
crypto = { path = "../crypto" }
sys = { path = "../sys" }
skylark = { path = "./skylark" }
google = { path = "../../third_party/google" }
file = { path = "../file" }
executor = { path = "../executor" }
base_radix = { path = "../base/radix" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf/compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []