[package]
name = "builder"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
macros = { path = "../macros" }
protobuf = { path = "../protobuf" }
compression = { path = "../compression" }
crypto = { path = "../crypto" }
sys = { path = "../sys" }
skylark = { path = "./skylark" }
protobuf_builtins = { path = "../../third_party/protobuf_builtins" }
file = { path = "../file" }
executor = { path = "../executor" }
base_radix = { path = "../base/radix" }
builder_proto = { path = "./proto" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []