[package]
name = "cmsis_svd"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
automata = { path = "../automata" }
regexp_macros = { path = "../regexp_macros" }
common = { path = "../common" }
parsing = { path = "../parsing" }
xml = { path = "../xml" }