[package]
name = "cnc"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[dependencies]
macros = { path = "../macros" }
protobuf = { path = "../protobuf", default-features = false }
math = { path = "../math", default-features = false }
common = { path = "../common", default-features = false }

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }

[features]
default = ["std", "alloc"]
alloc = ["common/alloc", "math/alloc", "protobuf/alloc"]
std = ["common/std", "math/std", "protobuf/std"]