[package]
name = "common"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
fs2 = "0.4.3"
libc = "0.2.62"
hex = "0.3.2"
base64 = "0.11.0"
async-trait = "0.1.50"
failure = "0.1.8"
futures = "0.3.13"
bytes = { git = "https://github.com/tokio-rs/bytes" }
lazy_static = "1.4.0"
typenum = "1.10.0"
generic-array = "0.13.2"
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = "0.4.19"