[package]
name = "common"
version = "0.1.0"
edition = "2018"

[dependencies]
libc = { version = "0.2.62", optional = true }
base64 = { version = "0.11.0", optional = true }
async-trait = { version = "0.1.50", optional = true }
failure = { version = "0.1.8", optional = true }
futures = { version = "0.3.15", optional = true }
futures-util = { version = "0.3.15", optional = true }
bytes = { git = "https://github.com/tokio-rs/bytes", optional = true }
lazy_static = { version = "1.4.0", optional = true }
typenum = "1.10.0"
generic-array = "0.13.2"
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
chrono = { version = "0.4.19", optional = true }
arrayref = "0.3.5"
nix = { version = "0.21.0", optional = true }
base_error = { path = "../base/error", default-features = false }
base_args = { path = "../base/args", optional = true }
macros = { path = "../macros" }

[features]
default = ["std"]
alloc = ["base_error/alloc"]
std = ["alloc", "base_error/std", "libc", "base64", "async-trait", "failure", "futures", "futures-util", "bytes", "lazy_static", "async-std", "chrono", "nix", "base_args"]
