[package]
name = "compression"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
parsing = { path = "../parsing" }
protobuf = { path = "../protobuf" }
bytes = { git = "https://github.com/tokio-rs/bytes" }
byteorder = "1.3.2"

[build-dependencies]
parsing_compiler = { path = "../parsing_compiler" }