[package]
name = "compression"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
parsing = { path = "../parsing" }
protobuf = { path = "../protobuf" }
file = { path = "../file" }
executor = { path = "../executor" }
macros = { path = "../macros" }
byteorder = "1.3.2"

[build-dependencies]
parsing_compiler = { path = "../parsing_compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []