[package]
name = "container"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
automata = { path = "../automata" }
regexp_macros = { path = "../regexp_macros" }
builder = { path = "../builder" }
nix = "0.21.0"
libc = "0.2.97"
protobuf = { path = "../protobuf" }
http = { path = "../http" }
macros = { path = "../macros" }
sstable = { path = "../sstable" }
datastore = { path = "../datastore" }
compression = { path = "../compression" }
usb = { path = "../usb" }
rpc = { path = "../rpc" }
rpc_util = { path = "../rpc_util" }
net = { path = "../net" }
raft = { path = "../raft" }
google = { path = "../../third_party/google" }
async-std = "1.9.0"
failure = "0.1.8"

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []