[package]
name = "container"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
base_radix = { path = "../base/radix" }
crypto = { path = "../crypto" }
automata = { path = "../automata" }
regexp_macros = { path = "../automata/regexp_macros" }
builder = { path = "../builder" }
nix = "0.21.0"
libc = "0.2.97"
protobuf = { path = "../protobuf" }
http = { path = "../http" }
macros = { path = "../macros" }
sstable = { path = "../sstable" }
datastore = { path = "../datastore" }
compression = { path = "../compression" }
usb = { path = "../usb" }
rpc = { path = "../rpc" }
rpc_util = { path = "../rpc_util" }
net = { path = "../net" }
raft = { path = "../raft" }
google = { path = "../../third_party/google" }
failure = "0.1.8"
executor = { path = "../executor" }
file = { path = "../file" }
sys = { path = "../sys" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf/compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []