[package]
name = "crypto"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
macros = { path = "../macros", optional = true }
asn = { path = "../asn", optional = true }
math = { path = "../math", optional = true }
common = { path = "../common", default-features = false }
perf = { path = "../perf", optional = true }
parsing = { path = "../parsing", optional = true }
pkix = { path = "../../third_party/pkix", optional = true }
generic-array = { version = "0.13.2"}
typenum = { version = "1.11.2" }
async-std = { version = "1.9.0", optional = true }

[dev-dependencies]
openssl = { path = "../../third_party/openssl" }

[features]
default = ["std", "alloc"]
alloc = ["common/alloc"]
std = ["macros", "asn", "math", "parsing", "pkix", "async-std", "alloc", "common/std", "perf/alloc", "perf/std"]