[package]
name = "datastore"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
http = { path = "../http" }
rpc = { path = "../rpc" }
rpc_util = { path = "../rpc_util" }
parsing = { path = "../parsing" }
sstable = { path = "../sstable" }
raft = { path = "../raft" }
protobuf = { path = "../protobuf" }
macros = { path = "../macros" }
net = { path = "../net" }
google = { path = "../../third_party/google" }
executor = { path = "../executor" }
file = { path = "../file" }
crypto = { path = "../crypto" }
base_radix = { path = "../base/radix" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf/compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []