[package]
name = "datastore"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
http = { path = "../http" }
rpc = { path = "../rpc" }
rpc_util = { path = "../rpc_util" }
parsing = { path = "../parsing" }
sstable = { path = "../sstable" }
raft = { path = "../raft" }
raft_client = { path = "../raft/client" }
protobuf = { path = "../protobuf" }
macros = { path = "../macros" }
net = { path = "../net" }
protobuf_builtins = { path = "../../third_party/protobuf_builtins" }
executor = { path = "../executor" }
executor_multitask = { path = "../executor/multitask" }
file = { path = "../file" }
crypto = { path = "../crypto" }
base_radix = { path = "../base/radix" }
datastore_proto = { path = "./proto" }
datastore_meta_client = { path = "./meta/client" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []