[package]
name = "emulator"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]


[dependencies]
common = { path = "../common" }
serde = "1.0"
serde_derive = "1.0"
failure = "0.1.6"
rand = "0.6.1"
ctrlc = "3.1.1"
tokio = "0.1.19"
libc = "0.2"
clap = "2.32.0"
byteorder = "1.3.2"
arrayref = "0.3.5"
minifb = "0.15.3"