[package]
name = "emulator"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]


[dependencies]
common = { path = "../common" }
serde = "1.0"
cpal = { git = "https://github.com/RustAudio/cpal" }
serde_derive = "1.0"
failure = "0.1.6"
ctrlc = "3.1.1"
libc = "0.2"
byteorder = "1.3.2"
arrayref = "0.3.5"
minifb = "0.15.3"