[package]
name = "executor"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2021"

[dependencies]
common = { path = "../common", default-features = false }
sys = { path = "../sys", optional = true }
macros = { path = "../macros" }

[features]
default = ["std", "alloc"]
alloc = ["common/alloc"]
std = ["common/std", "sys"]