[package]
name = "graphics"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
math = { path = "../math" }
image = { path = "../image" }
reflection = { path = "../reflection" }
macros = { path = "../macros" }
parsing = { path = "../parsing" }
fs2 = "0.4.3"
ctrlc = "3.1.1"
libc = "0.2"
minifb = "0.15.3"
num-traits = "0.2"
typenum = "1.10.0"
glfw = "0.29.0"
gl = "0.13.0"