[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
math = { path = "../math" }
image = { path = "../image" }
reflection = { path = "../reflection" }
macros = { path = "../macros" }
parsing = { path = "../parsing" }
typenum = "1.10.0"
glfw = "0.51.0"
gl = "0.14.0"
executor = { path = "../executor" }
file = { path = "../file" }