[package]
name = "haystack"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
http = { path = "../http" }
crypto = { path = "../crypto" }
byteorder = "1.3.2"
rand = "0.6.1"
arrayref = "0.3.5"
bytes = { git = "https://github.com/tokio-rs/bytes" }
base64 = "0.10.1"
fs2 = "0.4.3"
failure = "0.1.8"
diesel = { version = "= 1.3.3", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
mime-sniffer = "^0.1"
ipnetwork = "0.13.1"
chrono = "0.4.6"
ctrlc = "3.1.1"
protobuf = { path = "../protobuf" }
macros = { path = "../macros" }
protobuf_json = { path = "../protobuf_json" }
clap = "2.33.3"

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }
