[package]
name = "haystack"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
http = { path = "../http" }
crypto = { path = "../crypto" }
byteorder = "1.3.2"
fs2 = "0.4.3"
failure = "0.1.8"
diesel = { version = "= 1.3.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
mime-sniffer = "^0.1"
chrono = "0.4.6"
ctrlc = "3.1.1"
protobuf = { path = "../protobuf" }
macros = { path = "../macros" }
protobuf_json = { path = "../protobuf_json" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }
