[package]
name = "haystack"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
http = { path = "../http" }
crypto = { path = "../crypto" }
byteorder = "1.3.2"
failure = "0.1.8"
diesel = { version = "= 1.3.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
mime-sniffer = "^0.1"
protobuf = { path = "../protobuf" }
macros = { path = "../macros" }
protobuf_json = { path = "../protobuf/json" }
file = { path = "../file" }
executor = { path = "../executor" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf/compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []