[package]
name = "home_hub"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
macros = { path = "../macros" }
peripheral = { path = "../peripheral" }
rpi = { path = "../rpi" }
stream_deck = { path = "../stream_deck" }
hue = { path = "../hue" }
protobuf = { path = "../protobuf" }
container = { path = "../container" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf_compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []