[package]
name = "home_hub"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
macros = { path = "../macros" }
peripheral = { path = "../peripheral" }
rpi = { path = "../rpi" }
stream_deck = { path = "../peripherals/devices/stream_deck" }
hue = { path = "../api/hue" }
protobuf = { path = "../protobuf" }
cluster_client = { path = "../container/client" }

[build-dependencies]
protobuf_compiler = { path = "../protobuf/compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []