[package]
name = "http"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
parsing = { path = "../parsing" }
net = { path = "../net" }
compression = { path = "../compression" }
crypto = { path = "../crypto" }
automata = { path = "../automata" }
regexp_macros = { path = "../regexp_macros" }
async-std = "1.9.0"
failure = "0.1.8"

[build-dependencies]
parsing_compiler = { path = "../parsing_compiler" }