[package]
name = "http"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
parsing = { path = "../parsing" }
net = { path = "../net" }
compression = { path = "../compression" }
crypto = { path = "../crypto" }
automata = { path = "../automata" }
regexp_macros = { path = "../regexp_macros" }
failure = "0.1.8"
sys = { path = "../sys" }
executor = { path = "../executor" }
file = { path = "../file" }

[build-dependencies]
parsing_compiler = { path = "../parsing_compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []