[package]
name = "http"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
parsing = { path = "../parsing" }
reflection = { path = "../reflection" }
net = { path = "../net" }
compression = { path = "../compression" }
crypto = { path = "../crypto" }
automata = { path = "../automata" }
regexp_macros = { path = "../automata/regexp_macros" }
failure = "0.1.8"
sys = { path = "../sys" }
executor = { path = "../executor" }
executor_multitask = { path = "../executor/multitask" }
file = { path = "../file" }
macros = { path = "../macros" }

[build-dependencies]
parsing_compiler = { path = "../parsing/compiler" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []