[package]
name = "hue"
version = "0.0.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
http = { path = "../http" }
json = { path = "../json" }
net = { path = "../net" }
parsing = { path = "../parsing" }
macros = { path = "../macros" }
reflection = { path = "../reflection" }
executor = { path = "../executor" }