[package]
name = "image"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
compression = { path = "../compression" }
math = { path = "../math" }
macros = { path = "../macros" }
reflection = { path = "../reflection" }
parsing = { path = "../parsing" }
num-traits = "0.2"
typenum = "1.10.0"
arrayref = "0.3.5"
impl_ops = "0.1.1"
generic-array = "0.13.2"
approx = "0.3.2"
minifb = "0.15.3"
byteorder = "1.3.2"
lazy_static = "1.4.0"