[package]
name = "image"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
compression = { path = "../compression" }
math = { path = "../math" }
macros = { path = "../macros" }
reflection = { path = "../reflection" }
parsing = { path = "../parsing" }
executor = { path = "../executor" }
file = { path = "../file" }
typenum = "1.10.0"
impl_ops = "0.1.1"
generic-array = "0.13.2"
approx = "0.3.2"
byteorder = "1.3.2"
lazy_static = "1.4.0"