[package]
name = "json"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
parsing = { path = "../parsing" }
automata = { path = "../automata" }
regexp_macros = { path = "../regexp_macros" }
reflection = { path = "../reflection" }