[package]
name = "math"
version = "0.1.0"

[dependencies]
common = { path = "../common", default-features = false }
typenum = "1.10.0"
auto_ops = "0.3.0"
generic-array = "0.13.2"
approx = { version = "0.5.1", default-features = false }

[dev-dependencies]
testing = { path = "../testing" }

[features]
default = ["std", "alloc"]
std = ["common/std", "approx/std"]
alloc = ["common/alloc"]