[package]
name = "net"
version = "0.1.0"
authors = ["Dennis Shtatnov <densht@gmail.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
parsing = { path = "../parsing" }
regexp_macros = { path = "../regexp_macros" }
automata = { path = "../automata" }
crypto = { path = "../crypto" }
sys = { path = "../sys" }
executor = { path = "../executor" }
macros = { path = "../macros" }
radix = { path = "../radix" }
libc = "0.2"
nix = "0.21.0"

[build-dependencies]
parsing_compiler = { path = "../parsing_compiler" }